Proyecto Web Finalizado

--- a/MartinPosso_Authentication/Views/Categories/Index.cshtml
+++ b/MartinPosso_Authentication/Views/Categories/Index.cshtml
@@ -1,18 +1,21 @@
 ﻿@model IEnumerable<MartinPosso_Authentication.Models.Category>
 
-@{
-    ViewBag.Title = "Index";
-}
+@{ ViewBag.Title = "Index"; }
 
 <h2>Index</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
+@using (Html.BeginForm())
+{
+    @Html.TextBox("searchString")
+    <input type="submit" name="submit" value="Search" />
+}
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.CategoryName)
+            @Html.ActionLink("CategoryName", "Index", new { sortOrder = ViewBag.NameSortParm})
         </th>
         <th>
             @Html.DisplayNameFor(model => model.description)
@@ -20,20 +23,20 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.CategoryName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.description)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.CategoryID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.CategoryID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.CategoryID })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+<tr>
+    <td>
+        @Html.DisplayFor(modelItem => item.CategoryName)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.description)
+    </td>
+    <td>
+        @Html.ActionLink("Edit", "Edit", new { id = item.CategoryID }) |
+        @Html.ActionLink("Details", "Details", new { id = item.CategoryID }) |
+        @Html.ActionLink("Delete", "Delete", new { id = item.CategoryID })
+    </td>
+</tr>}
 
 </table>
