--- a/MartinPosso_Authentication/Views/Home/Index.cshtml
+++ b/MartinPosso_Authentication/Views/Home/Index.cshtml
@@ -3,7 +3,8 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
+    <h1>Ez Botz - Online Shop! Martin Posso, Kevin Coloma, Fernando Orbe</h1>
+    <img alt="Image" src="https://www.nevadaart.org/wp-content/uploads/2019/05/2019_MuseumShop_Hero.jpg" width="1000" height="600" />
     <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
     <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
