--- a/MartinPosso_Authentication/Views/Suppliers/Index.cshtml
+++ b/MartinPosso_Authentication/Views/Suppliers/Index.cshtml
@@ -1,21 +1,26 @@
 ﻿@model IEnumerable<MartinPosso_Authentication.Models.Supplier>
 
-@{
-    ViewBag.Title = "Index";
-}
+@{ ViewBag.Title = "Index"; }
 
 <h2>Index</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
+
+@using (Html.BeginForm())
+{
+    @Html.TextBox("searchString")
+    <input type="submit" name="submit" value="Search" />
+}
 <table class="table">
+
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.SupplierName)
+            @Html.ActionLink("SupplierName", "Index", new { sortOrder = ViewBag.NameSortParm})
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Address)
+            @Html.ActionLink("Address", "Index", new { sortOrder = ViewBag.AddressSortParm})
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Email)
@@ -23,23 +28,23 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.SupplierName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Address)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Email)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.SupplierID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.SupplierID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.SupplierID })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+<tr>
+    <td>
+        @Html.DisplayFor(modelItem => item.SupplierName)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.Address)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.Email)
+    </td>
+    <td>
+        @Html.ActionLink("Edit", "Edit", new { id = item.SupplierID }) |
+        @Html.ActionLink("Details", "Details", new { id = item.SupplierID }) |
+        @Html.ActionLink("Delete", "Delete", new { id = item.SupplierID })
+    </td>
+</tr>}
 
 </table>
