--- a/MartinPosso_Authentication/Views/Home/About.cshtml
+++ b/MartinPosso_Authentication/Views/Home/About.cshtml
@@ -1,7 +1,8 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = "We Care About Family";
 }
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt tempor eros, a tempus nisi aliquam nec. Etiam neque nisi, efficitur ut tortor id, sollicitudin blandit elit. Praesent vestibulum elit a ex lobortis porta. Etiam mollis, augue et egestas gravida, magna nibh egestas arcu, vitae commodo metus libero id est. Vivamus scelerisque et felis et elementum. Curabitur pharetra egestas metus, id aliquet nunc viverra a. Aenean arcu felis, euismod sed rutrum at, vulputate vel leo. Nam congue massa vel dolor convallis dapibus.</p>
+<img src="https://cdn.cnn.com/cnn/interactive/2020/health/reopening-coronavirus/media/visiting_family_friends/s_882C420634246CC9B64B4A84B8B6B6F87B162A57092CCBE1AF8729C15664712B_1590878612297_01_FAM.png" width="500" height="500" style="text-align:center;"/>
