--- a/MartinPosso_Authentication/Views/Home/About.cshtml
+++ b/MartinPosso_Authentication/Views/Home/About.cshtml
@@ -4,5 +4,35 @@
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt tempor eros, a tempus nisi aliquam nec. Etiam neque nisi, efficitur ut tortor id, sollicitudin blandit elit. Praesent vestibulum elit a ex lobortis porta. Etiam mollis, augue et egestas gravida, magna nibh egestas arcu, vitae commodo metus libero id est. Vivamus scelerisque et felis et elementum. Curabitur pharetra egestas metus, id aliquet nunc viverra a. Aenean arcu felis, euismod sed rutrum at, vulputate vel leo. Nam congue massa vel dolor convallis dapibus.</p>
-<img src="https://cdn.cnn.com/cnn/interactive/2020/health/reopening-coronavirus/media/visiting_family_friends/s_882C420634246CC9B64B4A84B8B6B6F87B162A57092CCBE1AF8729C15664712B_1590878612297_01_FAM.png" width="500" height="500" style="text-align:center;"/>
+<style>
+
+    .content {
+        text-align:center;
+        background-color: #454545;
+        box-shadow: #000 10px 10px 40px;
+        color: #fff;
+        margin: 10px;
+        padding:50px;
+        border-radius: 20px 20px;
+    }
+</style>
+
+<div class="content">
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt tempor eros, a tempus nisi aliquam nec.
+        Etiam neque nisi, efficitur ut tortor id, sollicitudin blandit elit. Praesent vestibulum elit a ex lobortis porta.
+        Etiam mollis, augue et egestas gravida, magna nibh egestas arcu, vitae commodo metus libero id est. Vivamus scelerisque et felis et elementum.
+        Curabitur pharetra egestas metus, id aliquet nunc viverra a. Aenean arcu felis, euismod sed rutrum at, vulputate vel leo.
+        Nam congue massa vel dolor convallis dapibus.
+    </p>
+    <img src="https://cdn.cnn.com/cnn/interactive/2020/health/reopening-coronavirus/media/visiting_family_friends/s_882C420634246CC9B64B4A84B8B6B6F87B162A57092CCBE1AF8729C15664712B_1590878612297_01_FAM.png" width="500" height="500" style="text-align:center;" />
+    <p>
+        Aliquam tempor molestie libero, et dignissim lacus faucibus id. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Mauris mattis felis sit amet felis malesuada, fermentum pharetra mi placerat. Nunc sed consectetur mauris, ut volutpat mauris.
+        Curabitur egestas velit at lacus vulputate, sit amet finibus purus placerat.
+        Suspendisse felis tortor, varius ut egestas vitae, porttitor ac arcu. Cras mi arcu, lobortis sit amet bibendum ut, dignissim non erat. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+        Curabitur non malesuada sem, a ornare quam. Nulla pretium dictum nibh, et hendrerit felis ullamcorper ac. Cras pretium non nisi id condimentum. Aliquam tincidunt dolor vitae felis
+        posuere lacinia. Fusce nisi turpis, convallis et ex in, porta pulvinar lorem. Donec rhoncus eget mauris nec lobortis.
+    </p>
+    <img src="https://post.greatist.com/wp-content/uploads/sites/3/2020/02/325466_1100-1100x628.jpg" width="1000" />
+
+</div>
