--- a/MartinPosso_Authentication/Views/Products/Index.cshtml
+++ b/MartinPosso_Authentication/Views/Products/Index.cshtml
@@ -13,7 +13,9 @@
 @using (Html.BeginForm())
 {
     @Html.TextBox("searchString")
-    <input type="submit" name="submit" value="Search" />
+    <input type="submit" name="submit" value="Search" style="background: #3CB19E;
+        color: #fff;
+        margin: 30px;"/>
 }
 <table class="table">
     <tr>
