--- a/MartinPosso_Authentication/Views/Users/Index.cshtml
+++ b/MartinPosso_Authentication/Views/Users/Index.cshtml
@@ -13,13 +13,15 @@
 @using (Html.BeginForm())
 {
     @Html.TextBox("searchString")
-    <input type="submit" name="submit" value="Search" />
+    <input type="submit" name="submit" value="Search" style="background: #3CB19E;
+        color: #fff;
+        margin: 30px;" />
 }
 
 <table class="table">
     <tr>
         <th>
-            @Html.ActionLink("UserName", "Index", new { sortOrder = ViewBag.NameSortParm})
+            @Html.ActionLink("UserName", "Index", new { sortOrder = ViewBag.NameSortParm })
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Email)
@@ -30,23 +32,24 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.UserName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Email)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Password)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.UserID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.UserID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.UserID })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.UserName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Email)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Password)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.UserID }) |
+                @Html.ActionLink("Details", "Details", new { id = item.UserID }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.UserID })
+            </td>
+        </tr>
+    }
 
 </table>
