--- a/MartinPosso_Authentication/Views/Home/Index.cshtml
+++ b/MartinPosso_Authentication/Views/Home/Index.cshtml
@@ -2,31 +2,57 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>Ez Botz - Online Shop! Martin Posso, Kevin Coloma, Fernando Orbe</h1>
-    <img alt="Image" src="https://www.nevadaart.org/wp-content/uploads/2019/05/2019_MuseumShop_Hero.jpg" width="1000" height="600" />
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+<style type="text/css">
+    img{
+        margin:30px;
+    }
+    .jumbotron
+    {
+        background:#454545;
+        box-shadow: 10px 10px 20px;
+        color: #757575;
+    }
+    .fa {
+        width: 128px;
+        height: 128px;
+        border-radius: 50%;
+    }
+    .fa-facebook {
+        width: 128px;
+        height:128px;
+        color:#3B5998;
+    }
+
+    .fa-instagram {
+        color:red;
+    }
+
+    .col-md-4{
+        text-align:center;
+    }
+</style>
+
+<div class="jumbotron" style="text-align:center;">
+    <img src="~/Assets/Ez Botz!.png" height="128" width="128" style="text-align:center"/>
+    <h1 style="color:#fff;">Ez Botz - Online Shop! Martin Posso, Kevin Coloma, Fernando Orbe</h1>
+    <img alt="Image" src="https://www.nevadaart.org/wp-content/uploads/2019/05/2019_MuseumShop_Hero.jpg" width="1000" height="600" />
+    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin orci tellus, tristique vel tincidunt sit amet, vulputate a nisl. Donec blandit turpis ac sapien venenatis efficitur. Suspendisse sagittis maximus dapibus. Duis vestibulum nunc vitae dui tristique commodo. Maecenas malesuada tellus vitae magna aliquet, in ornare lacus ultrices. Proin imperdiet blandit nisl tincidunt interdum. Etiam ullamcorper massa neque, vitae interdum sem semper pellentesque.</p>
+    <img src="https://cdn-a.william-reed.com/var/wrbm_gb_food_pharma/storage/images/publications/food-beverage-nutrition/foodnavigator.com/article/2019/07/11/the-store-of-the-future-what-does-it-look-like-and-which-retailers-are-leading-the-charge/9910882-4-eng-GB/The-store-of-the-future-What-does-it-look-like-and-which-retailers-are-leading-the-charge_wrbm_large.jpg"/>
+    <p>Morbi auctor tincidunt enim, nec venenatis quam vehicula a. Donec nibh metus, porttitor quis porta quis, vehicula sodales quam. Ut efficitur, nisi placerat mollis auctor, orci mi tempor urna, sit amet sodales ligula leo sed elit. Quisque porta, mi et porta scelerisque, neque justo pellentesque mi, vitae condimentum est purus gravida nunc. In at ultricies augue, vel congue velit. In commodo aliquet risus vitae molestie. Fusce tempus felis quis justo tristique venenatis. Aliquam nunc felis, rhoncus ut tellus sed, porttitor vehicula augue. Phasellus accumsan elit quis lacus porttitor, et luctus enim commodo. Maecenas lobortis massa suscipit, dapibus mi vitae, auctor purus. Donec pretium feugiat nibh, id sagittis ante aliquam at. Duis sed ante id metus vehicula aliquet ornare in velit. Ut odio justo, auctor pellentesque felis quis, volutpat scelerisque ligula. Quisque varius quam sed placerat pulvinar. Phasellus aliquam sapien at diam varius consectetur.</p>
+</div>
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <h2>Get to now us</h2>
+        <a class="fa fa-twitter" href="https://twitter.com" target="_blank"></a>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <h2>Shared moments with us</h2>
+        <a class="fa fa-instagram" href="https://instagram.com" target="_blank"></a>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <h2>Discuss with us</h2>
+        <a class="fa fa-facebook" href="https://facebook.com" target="_blank"></a>
     </div>
 </div>
