--- a/MartinPosso_Authentication/Views/Orders/Index.cshtml
+++ b/MartinPosso_Authentication/Views/Orders/Index.cshtml
@@ -12,12 +12,14 @@
 @using (Html.BeginForm())
 {
     @Html.TextBox("searchString")
-    <input type="submit" name="submit" value="Search" />
+    <input type="submit" name="submit" value="Search" style="background: #3CB19E;
+        color: #fff;
+        margin: 30px;" />
 }
 <table class="table">
     <tr>
         <th>
-            @Html.ActionLink("PersonName", "Index", new { sortOrder = ViewBag.NameSortParm})
+            @Html.ActionLink("PersonName", "Index", new { sortOrder = ViewBag.NameSortParm })
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Product.ProductName)
