--- a/MartinPosso_Authentication/Views/Products/Create.cshtml
+++ b/MartinPosso_Authentication/Views/Products/Create.cshtml
@@ -7,10 +7,12 @@
 <h2>Create</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+}
+
+<div class="page-content">
     <div class="form-horizontal">
         <h4>Product</h4>
         <hr />
@@ -77,8 +79,7 @@
             </div>
         </div>
     </div>
-}
-
+</div>
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
