--- a/MartinPosso_Authentication/Views/Suppliers/Index.cshtml
+++ b/MartinPosso_Authentication/Views/Suppliers/Index.cshtml
@@ -11,16 +11,18 @@
 @using (Html.BeginForm())
 {
     @Html.TextBox("searchString")
-    <input type="submit" name="submit" value="Search" />
+    <input type="submit" name="submit" value="Search" style="background: #3CB19E;
+        color: #fff;
+        margin: 30px;" />
 }
 <table class="table">
 
     <tr>
         <th>
-            @Html.ActionLink("SupplierName", "Index", new { sortOrder = ViewBag.NameSortParm})
+            @Html.ActionLink("SupplierName", "Index", new { sortOrder = ViewBag.NameSortParm })
         </th>
         <th>
-            @Html.ActionLink("Address", "Index", new { sortOrder = ViewBag.AddressSortParm})
+            @Html.ActionLink("Address", "Index", new { sortOrder = ViewBag.AddressSortParm })
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Email)
@@ -30,21 +32,22 @@
 
     @foreach (var item in Model)
     {
-<tr>
-    <td>
-        @Html.DisplayFor(modelItem => item.SupplierName)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.Address)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.Email)
-    </td>
-    <td>
-        @Html.ActionLink("Edit", "Edit", new { id = item.SupplierID }) |
-        @Html.ActionLink("Details", "Details", new { id = item.SupplierID }) |
-        @Html.ActionLink("Delete", "Delete", new { id = item.SupplierID })
-    </td>
-</tr>}
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.SupplierName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Address)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Email)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.SupplierID }) |
+                @Html.ActionLink("Details", "Details", new { id = item.SupplierID }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.SupplierID })
+            </td>
+        </tr>
+}
 
 </table>
