--- a/MartinPosso_Authentication/Views/Shared/_Layout.cshtml
+++ b/MartinPosso_Authentication/Views/Shared/_Layout.cshtml
@@ -21,7 +21,6 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
 
@@ -36,7 +35,7 @@
                             <li>@Html.ActionLink("People", "Index", "People")</li>
                         </ul>
                     </li>
-
+                    <li>@Html.ActionLink("Realizar Compra", "Create", "Orders")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
