--- a/MartinPosso_Authentication/Views/Products/Index.cshtml
+++ b/MartinPosso_Authentication/Views/Products/Index.cshtml
@@ -41,6 +41,9 @@
         <th>
             @Html.DisplayNameFor(model => model.Image)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Price)
+        </th>
         <th></th>
     </tr>
 
@@ -67,6 +70,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Image)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Price)
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { id = item.ProductID }) |
